deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpd
  labels:
    app: httpd
    app.kubernetes.io/component: httpd
    app.kubernetes.io/instance: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: httpd
  template:
    metadata:
      labels:
        deployment: httpd
    spec:
      volumes:
        - name: index
          configMap:
            name: httpd-cfgmap
            defaultMode: 420
      containers:
        - name: httpd
          image: quay.io/ahau/httpd
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: index
              mountPath: /var/www/html
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
